package patronObserver.observer2.cliente;

public interface Subscriptor {

    void notify(String producto);
}
